--- a/main.ipynb
+++ b/main.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ee889556",
-   "metadata": {},
-   "source": [
-    "### Loading the dataset"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "d4a6b8f8",
@@ -35,8 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b5200a8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading dataset\n",
+    "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/iris.csv\"\n",
+    "names = ['sepal-length', 'sepal-width', 'petal-legth', 'petal-width', 'class']\n",
+    "dataset = read_csv(url, names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9940ac",
    "metadata": {},
    "outputs": [],
    "source": []
