--- a/main.ipynb
+++ b/main.ipynb
@@ -40,8 +40,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2d9940ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "365d1b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    sepal-length  sepal-width  petal-legth  petal-width        class\n",
+      "0            5.1          3.5          1.4          0.2  Iris-setosa\n",
+      "1            4.9          3.0          1.4          0.2  Iris-setosa\n",
+      "2            4.7          3.2          1.3          0.2  Iris-setosa\n",
+      "3            4.6          3.1          1.5          0.2  Iris-setosa\n",
+      "4            5.0          3.6          1.4          0.2  Iris-setosa\n",
+      "5            5.4          3.9          1.7          0.4  Iris-setosa\n",
+      "6            4.6          3.4          1.4          0.3  Iris-setosa\n",
+      "7            5.0          3.4          1.5          0.2  Iris-setosa\n",
+      "8            4.4          2.9          1.4          0.2  Iris-setosa\n",
+      "9            4.9          3.1          1.5          0.1  Iris-setosa\n",
+      "10           5.4          3.7          1.5          0.2  Iris-setosa\n",
+      "11           4.8          3.4          1.6          0.2  Iris-setosa\n",
+      "12           4.8          3.0          1.4          0.1  Iris-setosa\n",
+      "13           4.3          3.0          1.1          0.1  Iris-setosa\n",
+      "14           5.8          4.0          1.2          0.2  Iris-setosa\n",
+      "15           5.7          4.4          1.5          0.4  Iris-setosa\n",
+      "16           5.4          3.9          1.3          0.4  Iris-setosa\n",
+      "17           5.1          3.5          1.4          0.3  Iris-setosa\n",
+      "18           5.7          3.8          1.7          0.3  Iris-setosa\n",
+      "19           5.1          3.8          1.5          0.3  Iris-setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# head\n",
+    "print(dataset.head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cf2c36e",
    "metadata": {},
    "outputs": [],
    "source": []
